--- a/labs/lab_04/lab_04.rmd
+++ b/labs/lab_04/lab_04.rmd
@@ -30,8 +30,10 @@ First, load the two precinct results CSV files in the `data` folder, one each fo
 md_rep_results <- read_csv("data/md_primary_precinct_rep.csv")
 md_dem_results <- read_csv("data/md_primary_precinct_dem.csv")
 
-MD_results_combined <- bind_rows(list(md_rep_results, md_dem_results))
-View(MD_results_combined)
+MD_results_combined <- bind_rows(list(md_rep_results, md_dem_results)) %>% 
+ 
+clean_names () 
+
 
 glimpse(MD_results_combined)
 ```
@@ -46,37 +48,51 @@ cleaned_md_locations <- md_locations %>%
 
 glimpse (cleaned_md_locations)
 ```
-
 These two dataframes have a pair of columns in common - not necessarily with the same column names. Join the two dataframes on that unique combination that describes a precinct and the jurisdiction that contains it:
 
-  mutate(across(county_code, as.character)) %>% 
 
 ```{r}
-Cleaned_MD_results_combined <- MD_results_combined %>% 
-  mutate(across(county, as.character)) %>% 
-  
-  
+joined_dataframe <-  MD_results_combined %>%  mutate(across(election_district_precinct, as.character)) %>% 
+  left_join(cleaned_md_locations, by=c("election_district_precinct"= "precinct_code", "county"= "county_code"))
 
-  left_join(MD_results_combined, by=c("county"="County_code")) 
+glimpse(joined_dataframe)
 ```
-
+ 
 ## Answer questions
 
 Q1. Using the newly-created dataframe and isolating just the results for Wes Moore and Aruna Miller, write code that calculates how many voting locations each county has, showing the county with the most voting locations first. There's a catch: multiple precincts can share the same voting location, so you'll need to calculate the distinct number of locations (Google is your friend).
 
 Does the county with the most voting locations have the largest population in the state (ask yourself: where have you seen county population figures recently)?
 
-A1. 
+A1. It's Prince George's County with 996 locations. It doesn't have the largest population (967201). Montgomery has largest population which is 1062061. 
 
 ```{r}
+filter_data <- joined_dataframe %>% 
+  filter(candidate_name=="Wes Moore and Aruna Miller")
+  
+filter_data
 ```
-
+```{r}
+filter_data <- joined_dataframe %>% 
+group_by(county_name) %>%
+  summarise(voting_location = n_distinct(location_name)) %>%
+  arrange(desc(voting_location))
+```
 
 Q2. Write code to produce a `votes` column which is the result of adding together `early_votes`, `election_night_votes`, `provisional_votes` and the mail-in votes, overwriting your dataframe so that it now has that `total_votes` column going forward. Then, separately write code to show each county and precinct and calculate the total votes in the Governor's race - bearing in mind that each precinct will have multiple rows in the dataframe, but you only want to see one row for each precinct. What is the name and voting location of the precinct that saw the most votes in the governor's race? 
 
-A2. 
+A2. It's Prince George County with the same num. of votes but in four different locations that include DR. HENRY A. WISE, JR. HIGH SCHOOL (3052), MARTIN BLVD ELEMENTARY SCHOOL - GYM (3052), SCHOOL #58  DR NATHAN A PITTS-ASHBURTON ELEM/MID (3052), WESTSIDE INTERMEDIATE SCHOOL (3052).
 
 ```{r}
+votes_collection <- joined_dataframe %>%  
+  mutate(votes = early_votes+ election_night_votes+provisional_votes+ mail_in_ballot_1_votes+mail_in_ballot_1_votes) 
+```
+```{r}
+total_votes_collection <- votes_collection %>% 
+  filter(office_name == "Governor / Lt. Governor") %>% 
+  group_by(election_district_precinct, county_name, location_name) %>% 
+  summarise(total_votes=sum(votes)) %>% 
+  arrange(desc(total_votes))
 ```
 
 Q3. Let's look at the average number of votes in each party's primary race for governor. Take the code you wrote for the last part of Q2, save the results to a new variable and then find the precincts with 0 total votes for governor. How many precincts are there, and which county has the most? What else would you need to know about these precincts to know whether this might be worth a story?
@@ -85,9 +101,21 @@ Finally, write code to calculate the average and median number of total votes ac
 
 Take a look at the the Annotated Code of Maryland's election laws (https://mgaleg.maryland.gov/2023RS/Statute_Web/gel/gel.pdf) - can you find a limit on the number of voters assigned to a precinct? How might your answer impact wait times to vote?
 
-A3. 
+A3. 13 precincts are there. Prince George's County has the most which is four. 
+
 
 ```{r}
+zero_votes_collection <- votes_collection %>% 
+  group_by(election_district_precinct, county_name) %>% 
+  summarise(total_votes = sum(votes)) %>% 
+  filter(total_votes == 0) %>% 
+    arrange(desc(total_votes))
+```
+```{r}
+total_votes_collection %>% ungroup() %>% 
+    summarize(mean_total_votes = mean(total_votes),
+    median_total_votes = median(total_votes)) 
+  
 ```
 
 Q4. Choose your own adventure: I want you to come up with a question you could ask of one of the dataframes we've created for this lab. It could involve candidates, or counties or types of voting, but it cannot be a variation of a previous question (so, for example, you can't ask, "What's the average number of votes per precinct in the U.S. Senate primary?"). First write the question and then try to answer it by writing code. If you're not sure of the exact code, try googling (or ask me or Ramsay for advice) but, at a minimum, describe what you think you'd have to do to answer it and what the results would look like. That can help.
